<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:elevation="20dp"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@drawable/box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_skala"
            style="@style/textblue.16"
            android:text="@string/_4_9"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box" />

        <TextView
            android:id="@+id/tv_sr"
            style="@style/textblue.16"
            android:text="@string/sr"
            android:layout_marginTop="-6dp"
            android:layout_marginStart="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_skala" />

        <TextView
            android:id="@+id/tv_tempat_gempa"
            style="@style/textblack.12bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="16"
            android:textSize="14sp"
            android:text="@string/desc5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_skala"
            app:layout_constraintTop_toBottomOf="@id/box" />

        <TextView
            android:id="@+id/tv_dalam"
            style="@style/textblack.12normal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/kedalaman_16_km"
            app:layout_constraintStart_toEndOf="@+id/tv_skala"
            app:layout_constraintTop_toBottomOf="@+id/tv_tempat_gempa" />

        <TextView
            android:id="@+id/tv_rasa"
            style="@style/textblack.12normal"
            android:layout_marginStart="16dp"
            android:ems="19"
            android:text="@string/dirasakan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_skala"
            app:layout_constraintTop_toBottomOf="@+id/tv_dalam" />

        <TextView
            android:id="@+id/tv_waktu"
            style="@style/textblack.12normal"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_skala"
            app:layout_constraintTop_toBottomOf="@+id/tv_rasa" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
